k8s/core-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-service
  namespace: callhat-app
spec:
  selector:
    app: core-service
  ports:
  - port: 8082
    targetPort: 8082
