k8s/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: callhat-app
spec:
  selector:
    app: gateway-service
  ports:
  - port: 8080
    targetPort: 8080
